[gd_scene load_steps=4 format=3 uid="uid://cr8lionjpobla"]

[ext_resource type="Script" path="res://CVPuzzle.gd" id="1_jq3e4"]
[ext_resource type="Texture2D" uid="uid://du68snccx4ttr" path="res://Stage 1 Assets/00.png" id="2_5v3i7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mr4nc"]
size = Vector2(60.8, 51.2)

[node name="CVPuzzle" type="Area2D"]
position = Vector2(200, 300)
scale = Vector2(0.75, 0.75)
script = ExtResource("1_jq3e4")

[node name="CVTarget" type="Area2D" parent="."]

[node name="TargetColorRect" type="ColorRect" parent="CVTarget"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -125.0
offset_right = 150.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CVTarget"]
scale = Vector2(5, 5)
shape = SubResource("RectangleShape2D_mr4nc")
debug_color = Color(0.839216, 0.384314, 0, 0.419608)

[node name="CVPiece" type="Area2D" parent="."]
z_index = 1
position = Vector2(400, 0)
metadata/_edit_group_ = true

[node name="CVTargetSprite" type="Sprite2D" parent="CVPiece"]
texture = ExtResource("2_5v3i7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CVPiece"]
scale = Vector2(5, 5)
shape = SubResource("RectangleShape2D_mr4nc")

[connection signal="mouse_entered" from="CVTarget" to="." method="_on_cv_target_mouse_entered"]
[connection signal="mouse_exited" from="CVTarget" to="." method="_on_cv_target_mouse_exited"]
[connection signal="input_event" from="CVPiece" to="." method="_on_cv_piece_input_event"]
